fix spacings

--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@ h1
 	text-align: center;
 
 	margin-top: 10;
-	margin-bottom: 5;
+	margin-bottom: 32;
 } /*h1*/
 
 h2
@@ -116,5 +116,4 @@ ol
 {
 	margin-top: 10;
 	margin-bottom: 10;
-	margin-left: 32;
 }
